--- a/business_project/src/App.css
+++ b/business_project/src/App.css
@@ -1,13 +1,24 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+#root{
+  width: 100%;
+  height: 100%;
+}
+
 .header{
   display: flex;
  align-items: center;
  background-color: #00425A;
- border-radius: 10px;
+
  padding: 10px;
  margin-bottom: 25px;
 
 }
-h1{
+h1 {
   margin-right: auto;
 }
 h2{
@@ -17,6 +28,7 @@ h3{
   align-items: center;
   
 }
+
 .tracks {
   margin: 10px;
   background-color: #7B8FA1;
@@ -45,6 +57,8 @@ transition: transform 0.3s ease;
 .booking-timelines{
   display: flex;
   flex-wrap: wrap;
+  margin: auto;
+  margin-bottom: 106px;
  
 }
 .timeline-div{
@@ -136,7 +150,8 @@ select {
   border: 1px solid gray;
   border-radius: 5px;
   width: 220px;
-  background-color: #00425A
+  background-color: #00425A;
+  margin: 15px;
 }
 
 option {
@@ -152,6 +167,35 @@ p {
 .slots-list-element{
 margin: 10px;
 }
-.booking-timelines{
-  margin: auto;
+
+.images{
+  width: 100%;
+  height: 100% ;
+  border-radius: 15px;
+  cursor: pointer;
+}
+.images:not(:first-child) {
+  display: none;
+}
+.images-and-descr{
+  display: flex;
+}
+.slider {
+  position: relative;
+  width: 30%;
+  height: 50%;
+  overflow: hidden;
+  margin: 15px;
+  margin-right: 50px;
+}
+.desc-and-rating{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+span{
+  margin-left: 150px;
+}
+.foot{
+  height: 50px;
 }
