--- a/business_project/src/App.css
+++ b/business_project/src/App.css
@@ -124,7 +124,7 @@ button {
   border-radius: 15px;
   margin:  15px;
   width: 220px;
-  height: 180px;
+  height: 30%;
 }
 .userData{
   margin-left: 300px;
