--- a/business_project/src/App.css
+++ b/business_project/src/App.css
@@ -4,10 +4,7 @@ html, body {
   height: 100%;
 }
 
-#root{
-  width: 100%;
-  height: 100%;
-}
+
 
 .header{
   display: flex;
@@ -27,6 +24,13 @@ h2{
 h3{
   align-items: center;
   
+}
+h4{
+  margin: 15px;
+}
+h5{
+  margin-left: 15px;
+  margin-right: auto;
 }
 
 .tracks {
@@ -197,5 +201,19 @@ span{
   margin-left: 150px;
 }
 .foot{
-  height: 50px;
+ height: 40px;
+  
+  position: relative;
+  left: 0;
+  bottom: 0;
+  right: 0;
+
 }
+.App{
+  min-height: calc(100vh - 60px);
+}
+.footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #00425A;}
