some minor change, plus adding filter options

--- a/business_project/src/App.css
+++ b/business_project/src/App.css
@@ -228,3 +228,85 @@ span{
   justify-content: center;
   align-items: center;
   background-color: #00425A;}
+
+/* Reset all slider styles */
+.MuiSlider-root {
+  margin: 0;
+  padding: 0;
+  width: auto;
+  height: auto;
+  border: none;
+  background-color: transparent;
+  color: #00425A !important;
+  
+}
+
+/* Reset slider track styles */
+.MuiSlider-track {
+  margin: 0;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #00425A !important;
+}
+
+/* Reset slider thumb styles */
+.MuiSlider-thumb {
+  margin: 0px;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: #fff;
+  border: 1px solid #00425A;
+  box-shadow: 0px 1px 3px #00425A;
+  background-color: #00425A !important;
+}
+
+.MuiSlider-rail {
+  margin: 0;
+  background-color: #00425A !important;
+}
+/* Reset slider value label styles */
+.MuiSlider-valueLabel {
+  left: calc(-50% + 6px);
+  top: -22px;
+  margin: 0;
+  background-color: #00425A !important;
+}
+
+.MuiSlider-valueLabel > span {
+  margin: 0;
+  width: 30px;
+  height: 30px;
+  font-size: 14px;
+  line-height: 30px;
+  background-color: #00425A !important;
+  border-radius: 50%;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
+}
+.MuiSlider-valueLabelLabel{
+  margin-left: 7px;
+  margin-right: 3px;
+  background-color: #00425A !important;
+}
+.MuiSlider-valueLabelCircle{
+  margin-left: -15px !important;
+  background-color: #00425A !important;
+  
+}
+.MuiSlider-valueLabelOpen{
+  margin: 0;
+  background-color: #567189;
+}
+.css-nnid7-MuiSlider-valueLabel{
+  background-color: #567189 !important;
+}
+span{
+  background-color: #567189;
+}
+label{
+  margin: 0 !important;
+}
+.filter{
+  background-color: #00425A;
+  color: black;
+}
