--- a/business_project/src/App.css
+++ b/business_project/src/App.css
@@ -65,14 +65,29 @@ transition: transform 0.3s ease;
   margin-bottom: 106px;
  
 }
-.timeline-div{
+/* .timeline-div{
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
-}
-.timeline-div:hover{
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
-}
+}*/
+/* .timeline-div:hover{
+  
+  animation-name: bg-color;
+  animation-duration: 0.5s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+} 
+@keyframes bg-color {
+  0% {
+    background-color: #f9f9f9;
+  }
+  50% {
+    background-color: #fbfbfb;
+  }
+  100% {
+    background-color: #f7f7f7;
+  }
+} */
 .timeline{
-  margin:15px;
+  margin:5px;
 }
 form {
   width: 300px;
@@ -117,7 +132,7 @@ button {
   display: flex;
   width: 50%;
   margin: 10px;
-  background-color: #00425A !important ;
+  background-color: #ffffff !important ;
 }
 .booked-times-h2{
   margin-right: auto;
@@ -132,20 +147,25 @@ button {
 .cancel-see{
   color:#7B8FA1 !important
 }
-
+.cancel-see:hover{
+  background-color:#f3f3f3 !important
+}
 
 .timeline-div{
-  background-color:#7B8FA1 ;
+  background-color: #fff ;
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s ease-in-out;
   border-radius: 15px;
   margin:  15px;
   width: 220px;
   height: 30%;
 }
+
 .userData{
-  margin-left: 300px;
-  margin-right: 300px;
+  margin: 20px 300px ;
+
   border-radius: 15px;
-  background-color: #7B8FA1;
+  background-color: #d3d3d3;
   height: 100%;
   align-items: center;  
   display: flex;
@@ -165,7 +185,7 @@ select {
   border: 1px solid gray;
   border-radius: 5px;
   width: 220px;
-  background-color: #00425A;
+  
   margin: 15px;
 }
 
@@ -184,8 +204,10 @@ margin: 10px;
 }
 
 .images{
-  width: 100%;
-  height: 100% ;
+  width: 720px;
+  height: 360px ;
+  object-fit: cover;
+  object-position: center;
   border-radius: 15px;
   cursor: pointer;
 }
@@ -194,9 +216,11 @@ margin: 10px;
 }
 .images-and-descr{
   display: flex;
+  margin: 30px auto;
 }
 .slider {
   position: relative;
+  border-radius: 15px;
   width: 30%;
   height: 50%;
   overflow: hidden;
@@ -207,6 +231,8 @@ margin: 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 50%;
+  margin: 10px;
 }
 span{
   margin-left: 150px;
@@ -227,9 +253,10 @@ span{
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #00425A;}
+  background-color: #ffffff;
+box-shadow: 3px #000000;}
 
-/* Reset all slider styles */
+
 .MuiSlider-root {
   margin: 0;
   padding: 0;
@@ -237,40 +264,40 @@ span{
   height: auto;
   border: none;
   background-color: transparent;
-  color: #00425A !important;
+  color: #000000 !important;
   
 }
 
-/* Reset slider track styles */
+
 .MuiSlider-track {
   margin: 0;
   height: 4px;
   border-radius: 2px;
-  background-color: #00425A !important;
+  background-color: #000000 !important;
 }
 
-/* Reset slider thumb styles */
+
 .MuiSlider-thumb {
   margin: 0px;
   width: 12px;
   height: 12px;
   border-radius: 50%;
   background-color: #fff;
-  border: 1px solid #00425A;
-  box-shadow: 0px 1px 3px #00425A;
-  background-color: #00425A !important;
+  border: 1px solid #000000;
+  box-shadow: 0px 1px 3px #000000;
+  background-color: #000000 !important;
 }
 
 .MuiSlider-rail {
   margin: 0;
-  background-color: #00425A !important;
+  background-color: #000000 !important;
 }
-/* Reset slider value label styles */
+
 .MuiSlider-valueLabel {
   left: calc(-50% + 6px);
   top: -22px;
   margin: 0;
-  background-color: #00425A !important;
+  background-color: #ffffff !important;
 }
 
 .MuiSlider-valueLabel > span {
@@ -279,14 +306,15 @@ span{
   height: 30px;
   font-size: 14px;
   line-height: 30px;
-  background-color: #00425A !important;
+  background-color: #ffffff !important;
   border-radius: 50%;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px;
 }
 .MuiSlider-valueLabelLabel{
   margin-left: 7px;
   margin-right: 3px;
-  background-color: #00425A !important;
+  background-color: #ffffff !important;
+  color: #000000 !important;
 }
 .MuiSlider-valueLabelCircle{
   margin-left: -15px !important;
@@ -300,13 +328,36 @@ span{
 .css-nnid7-MuiSlider-valueLabel{
   background-color: #567189 !important;
 }
-span{
-  background-color: #567189;
-}
+
 label{
   margin: 0 !important;
+
 }
 .filter{
   background-color: #00425A;
   color: black;
+}
+.MuiInputBase-root{
+  background-color: #fff !important;
+}
+label{
+  color: black !important;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+  transition: background-color 600000s 0s, color 600000s 0s;
+}
+
+hr {
+  border: none;
+  height: 0.1px;
+  width: 100%;
+  background-color: black;
+  box-shadow: 0 3px 3px rgba(0,0,0,0.5);
+  
+}
+
+form{
+  margin-top: 30px;
 }
