--- a/business_project/src/index.css
+++ b/business_project/src/index.css
@@ -1,8 +1,9 @@
 html, body, #root{
-  background-color: #567189;
+  background-color: #ffffff;
  
     width: 100%;
-    min-height: 100%
+    min-height: 100%;
+    margin:0px
     
   }
   #root {
