--- a/business_project/src/App.css
+++ b/business_project/src/App.css
@@ -37,8 +37,8 @@ h5{
   margin: 10px;
   background-color: #7B8FA1;
   border-radius: 10px;
-  height: 100%;
-  width: 32%;
+  max-width: 345px;
+  
   align-items: center;  
   display: flex;
 justify-content: center;
@@ -130,8 +130,7 @@ button {
 }
 .booked-times{
   display: flex;
-  width: 50%;
-  margin: 10px;
+  
   background-color: #ffffff !important ;
 }
 .booked-times-h2{
@@ -141,9 +140,7 @@ button {
 
   cursor: pointer;
 }
-.timeline{
-  cursor: pointer;
-}
+
 .cancel-see{
   color:#7B8FA1 !important
 }
@@ -156,9 +153,9 @@ button {
   box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
   transition: box-shadow 0.3s ease-in-out;
   border-radius: 15px;
-  margin:  15px;
+  margin:  6px;
   width: 220px;
-  height: 30%;
+  
 }
 
 .userData{
@@ -204,7 +201,7 @@ margin: 10px;
 }
 
 .images{
-  width: 720px;
+  width: 100%;
   height: 360px ;
   object-fit: cover;
   object-position: center;
@@ -217,6 +214,7 @@ margin: 10px;
 .images-and-descr{
   display: flex;
   margin: 30px auto;
+  
 }
 .slider {
   position: relative;
@@ -297,7 +295,7 @@ box-shadow: 3px #000000;}
   left: calc(-50% + 6px);
   top: -22px;
   margin: 0;
-  background-color: #ffffff !important;
+  background-color: transparent!important;
 }
 
 .MuiSlider-valueLabel > span {
@@ -306,14 +304,14 @@ box-shadow: 3px #000000;}
   height: 30px;
   font-size: 14px;
   line-height: 30px;
-  background-color: #ffffff !important;
+  background-color: transparent !important;
   border-radius: 50%;
   box-shadow: 0px;
 }
 .MuiSlider-valueLabelLabel{
   margin-left: 7px;
   margin-right: 3px;
-  background-color: #ffffff !important;
+  background-color: transparent !important;
   color: #000000 !important;
 }
 .MuiSlider-valueLabelCircle{
@@ -360,4 +358,10 @@ hr {
 
 form{
   margin-top: 30px;
+}
+
+a{
+  margin: 15px;
+  font-size: 30px;
+  color:#000000
 }
